[Tips/trips Pixel Perfect CSS]: Fix add missing color variable

--- a/styles/utils/variables.scss
+++ b/styles/utils/variables.scss
@@ -1,5 +1,6 @@
 $color-white: #fff;
 $color-contessa: #c97164;
+$color-quicksand: #bc978c;
 
 $font-george-x: 'George X';
 $font-suisse-bp: 'Suisse BP';
